@@ -516,6 +516,34 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|security
+operator|.
+name|AuthorizationContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|security
+operator|.
+name|PermissionNameProvider
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|update
 operator|.
 name|AddUpdateCommand
@@ -720,6 +748,24 @@ name|makeMap
 import|;
 end_import
 
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|security
+operator|.
+name|PermissionNameProvider
+operator|.
+name|Name
+operator|.
+name|UPDATE_PERM
+import|;
+end_import
+
 begin_class
 DECL|class|BlobHandler
 specifier|public
@@ -729,6 +775,8 @@ extends|extends
 name|RequestHandlerBase
 implements|implements
 name|PluginInfoInitialized
+implements|,
+name|PermissionNameProvider
 block|{
 DECL|field|log
 specifier|private
@@ -2280,6 +2328,47 @@ argument_list|,
 literal|"core.system.blob.upload"
 argument_list|)
 return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getPermissionName
+specifier|public
+name|Name
+name|getPermissionName
+parameter_list|(
+name|AuthorizationContext
+name|ctx
+parameter_list|)
+block|{
+switch|switch
+condition|(
+name|ctx
+operator|.
+name|getHttpMethod
+argument_list|()
+condition|)
+block|{
+case|case
+literal|"GET"
+case|:
+return|return
+name|Name
+operator|.
+name|READ_PERM
+return|;
+case|case
+literal|"POST"
+case|:
+return|return
+name|Name
+operator|.
+name|UPDATE_PERM
+return|;
+default|default:
+return|return
+literal|null
+return|;
+block|}
 block|}
 block|}
 end_class
